--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@heroicons/react": "^2.1.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/react-big-calendar": "^1.8.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.363.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.11.6",
     "react-dom": "^18.2.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
+    "rsuite": "^5.59.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
